Stop .header .button stretching with flex-start

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ body {
 /* Header */ 
 
 .header { 
-
 }
 
 .header .container {
@@ -64,7 +63,7 @@ body {
 }
 
 .header .update {
-    display: inline flex;
+    display: inline-flex;
     border: 1px solid #000000;
     border-radius: 30px;
     padding: 20px 30px;
@@ -92,14 +91,26 @@ body {
     font-size: 16px;
 }
 
-.header .title {
+.header .container-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;  /* stops .button stretching */
+    height: 250px;
+    
+}
 
+.header .title {
+    font-size: 70px;
+    font-weight: bold;
+    width: 700px;
 }
 
 .header .description {
-
+    font-size: 30px;
 }
 
 .header .button {
-
+    
+   
 }
